--- a/AndoridApp/app/build.gradle
+++ b/AndoridApp/app/build.gradle
@@ -23,6 +23,15 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     implementation 'com.android.support:design:26.1.0'
+    // RecyclerView
+    compile 'com.android.support:recyclerview-v7:26.1.0'
+
+    // CardView
+    compile 'com.android.support:cardview-v7:26.1.0'
+
+    // Glide
+    compile 'com.github.bumptech.glide:glide:3.7.0'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
@@ -32,4 +41,5 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.3.0'
     implementation 'com.squareup.retrofit2:retrofit:2.3.0'
     implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+
 }
