--- a/AndoridApp/app/src/main/AndroidManifest.xml
+++ b/AndoridApp/app/src/main/AndroidManifest.xml
@@ -12,6 +12,7 @@
     <uses-permission android:name="android.permission.READ_INTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="com.google.android.providers.gsf.permission.READ_GSERVICES" />
 
     <application
         android:allowBackup="true"
@@ -21,9 +22,11 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <meta-data
+            android:name="com.google.android.gms.version"
+            android:value="@integer/google_play_services_version" />
+        <meta-data
             android:name="com.google.android.geo.API_KEY"
-            android:value="AIzaSyCr_IUDTIZRMaFGKXq-bjwIKq9nUZOChgE" />
-
+            android:value="AIzaSyAUqUEb0zBcd36PYNAYiRLO-fu6j9qLduI" />
         <activity
             android:name=".SplashScreen"
             android:screenOrientation="portrait">
